修复搜索BUG，添加项目模块，新增lib:arch livedata

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,6 +27,7 @@
         android:background="@android:color/white"
         android:drawablePadding="10dp"
         android:hint="请输入密码"
+        android:inputType="textWebPassword"
         android:paddingLeft="10dp"
         android:textSize="14sp" />
 
