--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -27,6 +27,7 @@
         android:background="@android:color/white"
         android:drawablePadding="10dp"
         android:hint="请输入密码"
+        android:inputType="textWebPassword"
         android:paddingLeft="10dp"
         android:textSize="14sp" />
     <EditText
@@ -39,6 +40,7 @@
         android:background="@android:color/white"
         android:drawablePadding="10dp"
         android:hint="请再次输入密码"
+        android:inputType="textWebPassword"
         android:paddingLeft="10dp"
         android:textSize="14sp" />
     <Button
