--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context="com.xiocao.wanandroid.ui.search.SearchActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/hotRvKey"/>
+
     <include layout="@layout/include_recyclerview" />
 
 </LinearLayout>
