--- a/app/src/main/res/menu/main_options_menu.xml
+++ b/app/src/main/res/menu/main_options_menu.xml
@@ -8,6 +8,6 @@
         android:id="@+id/navigation_search"
         android:title="搜索"
         app:showAsAction="always"
-        android:icon="@mipmap/icon_search"/>
+        android:icon="@drawable/ic_search"/>
 
 </menu>
