--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,10 +12,11 @@
         app:tabIndicatorColor="@color/colorAccent"
         app:tabIndicatorHeight="2dp"
         app:tabMode="scrollable"
+        app:tabIndicatorFullWidth="false"
         app:tabSelectedTextColor="@color/colorAccent"
         app:tabTextColor="@android:color/black"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/tabViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
