--- a/app/src/main/res/layout/item_cate_list.xml
+++ b/app/src/main/res/layout/item_cate_list.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         tools:text="title" />
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
